force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/KimbleOne__InterfaceFieldMap__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Interface Field Map</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Field Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>