force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__DestinationFieldLookupKeyFieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DestinationFieldLookupKeyFieldName__c</fullName>
    <label>Destination Field Lookup Key Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>