force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__DestinationFieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DestinationFieldName__c</fullName>
    <label>Destination Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>