force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__InterfaceMap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceMap__c</fullName>
    <label>Interface Map</label>
    <referenceTo>KimbleOne__InterfaceMap__c</referenceTo>
    <relationshipLabel>Interface Field Maps</relationshipLabel>
    <relationshipName>InterfaceFieldMaps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>