force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__InterfaceSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interface Source</label>
    <referenceTo>KimbleOne__InterfaceSource__c</referenceTo>
    <relationshipLabel>Interface Field Maps</relationshipLabel>
    <relationshipName>InterfaceFieldMaps</relationshipName>
    <type>Lookup</type>
</CustomField>