force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__SourceFieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SourceFieldName__c</fullName>
    <label>Source Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>