force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__SourceFieldPositions__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SourceFieldPositions__c</fullName>
    <label>Source Field Positions</label>
    <length>80</length>
    <type>Text</type>
</CustomField>