force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__SourceValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SourceValue__c</fullName>
    <label>Source Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>