force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__TransformationType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TransformationType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transformation Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TransformationType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Interface Field Maps (Transformation Type)</relationshipLabel>
    <relationshipName>InterfaceFieldMapsTransformationType</relationshipName>
    <type>Lookup</type>
</CustomField>