force-app/main/default/objects/KimbleOne__InterfaceFieldMap__c/fields/KimbleOne__TransformationValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TransformationValue__c</fullName>
    <label>Transformation Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>